packages/svelte/tests/compiler-errors/samples/unclosed-attribute-self-close-tag/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'expected_token',
		message: 'Expected token }',
		position: [19, 19]
	}
});
